[Styles] Fix site padding bug on small screens

--- a/resources/sass/gdos/index.scss
+++ b/resources/sass/gdos/index.scss
@@ -23,7 +23,7 @@
 @media only screen and (max-width: 980px) {
     .page-container {
         max-width: 2048px !important;
-        padding: 0 !important;
+        padding: 0 1rem 2rem;
     }
 }
 
